--- a/diseases/hd/style_1.css
+++ b/diseases/hd/style_1.css
@@ -823,7 +823,7 @@ footer .logos{
 
 footer .logos .logo-one img{
   height: 50px;
-  width: 100px;
+  width: 90px;
   margin: 5px;
 }
 
@@ -1055,36 +1055,35 @@ figcaption{
 
 
  footer .collumns .first-third{
- 	margin: 10px 0px !important;
- 	border-left: none !important;
-	width: 120px !important;
+	 margin: 10px 0px !important;
+	 border-left: none !important;
+	 border-right: 3px solid #898989;
  }
 
  footer .collumns .second-third{
- 	margin: 10px 0px !important;
-	width: 120px !important;
+	 margin: 10px 0px !important;
+	 border-left: none !important;
  }
 
  footer .collumns .third-third{
- 	margin: 10px 0px !important;
-	width: 120px !important;
+	 margin: 10px 0px !important;
  }
 
  footer .logos .logo-one img{
  	height: auto !important;
- 	width: 25vw !important;
+ 	width: 20vw !important;
  	margin: 5px;
  }
 
  footer .logos .logo-two img{
  	height: auto !important;
- 	width: 30vw !important;
+ 	width: 25vw !important;
  	margin: 5px;
  }
 
  footer .logos .logo-three img{
  	height: auto !important;
- 	width: 33vw !important;
+ 	width: 27vw !important;
  	margin: 5px;
  }
 }
@@ -1288,18 +1287,36 @@ figcaption{
 	 /* ------------------------ */
 
 	footer .collumns .first-third{
-		margin: 10px 0px !important;
-		border-left: none !important;
-		border-right: 3px solid #898989;
+ 		margin: 10px 0px !important;
+ 		border-left: none !important;
+ 		border-right: 3px solid #898989;
+ 	}
+
+ 	footer .collumns .second-third{
+ 		margin: 10px 0px !important;
+ 		border-left: none !important;
+ 	}
+
+ 	footer .collumns .third-third{
+ 		margin: 10px 0px !important;
+ 	}
+
+	footer .logos .logo-one img{
+		height: auto !important;
+		width: 12vw !important;
+		margin: 5px;
 	}
 
-	footer .collumns .second-third{
-		margin: 10px 0px !important;
-		border-left: none !important;
+	footer .logos .logo-two img{
+		height: auto !important;
+		width: 12vw !important;
+		margin: 5px;
 	}
 
-	footer .collumns .third-third{
-		margin: 10px 0px !important;
+	footer .logos .logo-three img{
+		height: auto !important;
+		width: 18vw !important;
+		margin: 5px;
 	}
 
 }
