--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   width: auto;
   max-width: 170px;
   max-height: 170px;
+  cursor: default;
 }
 
 .ualg-logo{
@@ -211,7 +212,6 @@ nav .fas{
     text-align: right;
     z-index: 2;
     transition: 1s;
-
   }
 
   .nav-links ul li a{
@@ -253,54 +253,107 @@ nav .fas{
   }
 }
 /* Galaxy fold */
-@media(max-width: 280px){
+@media (max-width: 280px){
+
+  html, body{
+    width: 100%;
+    height:100%;
+    margin:0;
+    padding: 0;
+    overflow-x: hidden;
+
+  }
+  nav{
+    display: flex;
+    padding: 0% 6%;
+  }
   .poly-q{
-    max-width: 60px;
-    max-height: 60px;
+    width: 20vw;
+    height: auto;
   }
 
   .abcri-logo{
-    max-width: 60px;
-    max-height: 35px;
+    width: 20vw;
+    height: auto;
+    margin-top: 10px !important;
+    margin-right: 10px !important;
   }
-    .text-box h1{
-      font-size: 25px;
-      padding: 20px 0px;
+  svg{
+    width: 30vw;
   }
-    .text-box p{
-      font-size: 18px;
-      padding: 10px;
 
-}
-    .text-box{
-      width: 90%;
-      color: #fff;
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-}
-    .copy-right{
-      font-size: 10px;
-      top: 90;
-      left:50%;
-    }
-    nav .fas{
+  .nav-links{
+    position: absolute;
+    background: rgba(24, 32, 65, 0.95);
+    height: 100vh;
+    width: 100px;
+    top: 0;
+    right: -210px;
+    text-align: right;
+    z-index: 2;
+    transition: 1s;
+  }
+
+  .nav-links ul li a{
+    font-size: 12px;
+  }
+
+  .nav-links ul li{
       display: block;
-      text-align: left;
-      color: #fff;
-      font-size: 20px;
-      cursor: pointer;
-    }
-    .btn-visit{
-      position: relative;
-      top: 50px;
+      padding: 6px 10px;
+  }
+
+  nav .fas{
+    display: block;
+    text-align: left;
+    position: relative;
+    color: #fff;
+    font-size: 25px;
+    cursor: pointer;
+  }
+
+  .text-box{
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .text-box h1{
+    font-size: 20px;
+
 
     }
+  .text-box p{
+    font-size: 12px;
+    top: 50%;
+    left: 50%;
+  }
+
+  .btn-visit{
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 16px 40px;
+    font-size: 20px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    border-radius: 6px;
+  }
+  .copy-right{
+    font-size: 10px;
+    top: 90%;
+    left:50%;
+  }
+
 
 
 }
+
 /* Ipad/Tablet */
 @media (min-width: 701px) and (max-width: 1024px){
   html, body{
