--- a/authors/authors.css
+++ b/authors/authors.css
@@ -125,12 +125,14 @@ nav .return-little{
   width: auto;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin-top: 8%;
+  margin-top: 10%;
   margin-bottom: 10%;
 }
 
 .team .team_members{
   background: rgba(73,73,73,0.3);
+	/* background: rgba(232, 232, 232, 1); */
+  /* color: #000; */
   margin: 100px;
   margin-top: 80px;
   height: auto;
@@ -408,10 +410,19 @@ footer .logos .logo-three img{
 		width: 100%;
 	}
 
-	.team_members{
+
+	.team .team_members{
+		/* background: rgba(232, 232, 232, 1);
+	  color: #000; */
 		padding: 20px 10px !important;
 		margin: 100px 0 !important;
 	}
+
+
+	/* .team .team_members:hover{
+	  background: rgba(232, 232, 232, 1);
+	  color: #000;
+	} */
 
 	footer{
     font-size: 13px;
