--- a/contact/contact_style.css
+++ b/contact/contact_style.css
@@ -668,10 +668,10 @@ footer .logos .logo-three img{
 	  }
 	}
 
-	@media (min-width: 1590px){
+	@media (min-width: 1590px) and (max-width: 1750px){
 
 	  header h1{
-	    font-size: 27px;
+	    font-size: 26px;
 	  }
 
 	}
